[package]
name = "client-3dsdb"
version = "0.2.0"
edition = "2021"
description = "A Rust client for 3DS title DBs."
repository = "https://github.com/Lewis-Trowbridge/client-3dsdb"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.7.1"
serde = { version = "1.0.164", features = ["derive"] }
serde-xml-rs = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.100", optional = true }

[dev-dependencies]
rstest = "0.18.1"

[features]
xml = ["dep:serde-xml-rs"]
json = ["dep:serde_json"]