[package]
name = "client-3dsdb"
version = "0.3.0"
edition = "2021"
description = "A Rust client for 3DS title DBs."
repository = "https://github.com/Lewis-Trowbridge/client-3dsdb"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["default", "blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-xml-rs = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.100", optional = true }
strum = { version = "0.25.0", optional = true }
strum_macros = { version = "0.25.1", optional = true }
futures = { version = "0.3.28", optional = true }

[dev-dependencies]
rstest = "0.18.1"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"] }
once_cell = "1.18.0"

[features]
xml = ["dep:serde-xml-rs"]
json = ["dep:serde_json", "dep:strum", "dep:strum_macros", "dep:futures"]

[package.metadata.docs.rs]
all-features = true